--- a/pages/nuestroTrabajo.html
+++ b/pages/nuestroTrabajo.html
@@ -11,6 +11,11 @@
         <link href="../css/normalize.css" rel="stylesheet">
         <link rel="preload" href="../css/style.css" as="styles">
         <link href="../css/style.css" rel="stylesheet">  
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+        <link href="./css/normalize.css" rel="stylesheet">
+    
+        <link href="../css/style.css" rel="stylesheet">   
         <title>Nuestro Trabajo - Arte Impreso</title>
     </head>
 
@@ -19,21 +24,55 @@
         <header class="header"> <!-- Seccion 1 -->
             <h1><span>Arte</span>Impreso</h1>
 
-            <nav class="navegacionPrincipal">
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="nuestroTrabajo.html">Nuestro Trabajo</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="cuenta.html">Mi cuenta</a></li>
-                
-                </ul>
-            </nav>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li></li><a class="nav-link" href="./index.html">Inicio</a></li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./productos.html">Productos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./nuestroTrabajo.html">Nuestro Trabajo</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./cuenta.html">Mi Cuenta</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
         </header>
 
         <section class="contenedor"> <!-- Seccion 1 -->
             <h2>Nuestro Producto</h2>
-            <img width="70%" src="../img/living.jpg" alt="Foto de livig con cuadros impresos en 3D">
+            <div id="carouselExample" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="../img-carrusel/carousel1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img-carrusel/carousel2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img-carrusel/carousel3.jpg" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
         </section>
 
         <section class="contenedor"> <!-- Seccion 2 -->
@@ -77,4 +116,6 @@
         </footer>
 
     </body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </html>
